# py4gh

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: main.yml
py4gh/: main.py  utility.py
tests/: test_py4gh.py
