[tool.poetry]
name = "py4gh"
version = "0.1.0"
description = ""
authors = ["Biranjan <biranjan.raut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.61.1"
crypt4gh = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
p4gh = "py4gh.main:cli_parser"
